--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -13,7 +13,7 @@
     align-content: center;
     margin-top: 12px;
     margin-right: 15px;
-    margin-left: 18px;
+    margin-left: 45px;
 }
 
 h1 {
@@ -22,6 +22,7 @@ h1 {
 
 header, .mainPedidos {
     display:inline-flex;
+    align-content: center;
 }
 
 header {
@@ -36,21 +37,21 @@ section {
 }
 
 .order {
-    width: 100vw;
+    width: 90vw;
+    margin-left: 50px;
+    border-top: black;
+    border-top-style: solid;
 }
 
 .menu {
-    background-color: rgb(209, 207, 207);
+    background-color: white;
 }
 
 .listItems {
     list-style-type: none;
     display:flex;
     flex-direction:row;
-    padding-inline-start: none;
     width:90vw;
-    margin-left: auto;
-    margin-right: auto;
     flex-wrap: wrap;
 }
 
@@ -59,5 +60,78 @@ section {
     width: 150px;
     height: 80px;
     margin: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: #dcdee0;
+    color: #2A2D34;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.listSelectedItems {
+    list-style-type: none;
+    display:flex;
+    flex-direction:column;
+    width:90vw;
+    flex-wrap: wrap;
+}
+
+.selectedItem {
+    margin: 10px;
+    width:60vw;
+    color: #2A2D34;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.nameSelectedItem {
+    width:250px;
+}
+
+span {
+    margin-right: 5px;
+} 
+
+h2 {
+    color: #2A2D34;
+    margin-top: 30px;
+} 
+
+.menuHeader {
+    margin-left: 50px;
+    width: 450px;
+}
+
+.btnMenuType {
+    background-color: #F17F29;
+    width: 170px;
+    padding: 10px;
+    height: 50px;
+    margin-right:20px;
+    outline-color: #F17F29;
+    border-color: #F17F29;
+    border-style: hidden;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.btnSend {
+    background-color: #5C946E;
+    width: 170px;
+    padding: 10px;
+    height: 50px;
+    margin-right:20px;
+    outline-color: #5C946E;
+    border-color: #5C946E;
+    border-style: hidden;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.deleteBtn {
+    width: 20px;
+    height: 20px;
 }
