--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -66,6 +66,11 @@ section {
     border-radius: 15px;
 }
 
+.imgItem {
+    width: 50px;
+    height:50px;
+}
+
 .listSelectedItems {
     list-style-type: none;
     display:flex;
