--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -16,6 +16,10 @@
     margin-left: 45px;
 }
 
+.button1 {
+    font-size: medium;
+}
+
 h1 {
     margin-top: 18px;
     font-size: 27px;
@@ -42,6 +46,7 @@ section {
     margin-left: 50px;
     border-top: black;
     border-top-style: solid;
+    font-size: large;
 }
 
 .menu {
@@ -54,11 +59,12 @@ section {
     flex-direction:row;
     width:90vw;
     flex-wrap: wrap;
+    font-size: large;
 }
 
 
 .menuItem {
-    width: 190px;
+    width: 200px;
     height: 70px;
     margin: 5px;
     background-color: #dcdee0;
@@ -67,7 +73,7 @@ section {
     border-radius: 15px;
     display: flex;
     flex-direction: row;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: bold;
 }
 
@@ -89,6 +95,7 @@ section {
 }
 
 .listSelectedItems {
+    font-size: large;
     list-style-type: none;
     display:flex;
     flex-direction:column;
@@ -126,9 +133,9 @@ h2 {
 
 .btnMenuType {
     background-color: #e47f32;
-    width: 150px;
+    width: 154px;
     padding: 5px;
-    height: 50px;
+    height: 55px;
     margin-right:10px;
     outline-color:#696969;
     border-color: #696969;
@@ -136,7 +143,7 @@ h2 {
     border-radius: 10px;
     color: rgb(255, 255, 255);
     font-weight: bold;
-    font-size: 15px;
+     font-size: 18px;
 }
 
 .btnSend {
@@ -151,7 +158,7 @@ h2 {
     border-radius: 10px;
     color: rgb(255, 255, 255);
     font-weight: bold;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .deleteBtn {
