--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -1,3 +1,8 @@
+body {
+    background-color: rgb(240, 235, 235);
+}
+
+
 .Logo {
     height: 40px;
     width: 40px;
@@ -17,7 +22,11 @@
 }
 
 .button1 {
-    font-size: medium;
+    background: none;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    outline: none ;
 }
 
 h1 {
@@ -39,18 +48,49 @@ header {
 
 section {
     max-width: 100vw;
+    background-color: rgb(240, 235, 235);
 }
 
 .order {
-    width: 90vw;
-    margin-left: 50px;
-    border-top: black;
-    border-top-style: solid;
+    width: 85vw;
+    margin-left: auto;
+    margin-right: auto;
     font-size: large;
+    background-color: rgba(255, 255, 255, 0.767);
+    border-radius: 10px;
+    padding: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
-.menu {
-    background-color: white;
+.orderHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 85vw;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;
+}
+
+.inLine {
+    display: flex;
+    flex-direction: row;
+}
+
+.inLineSpace {
+    margin-right: 20px;
+}
+
+
+.menuSection {
+    background-color: rgb(240, 235, 235);
+    padding: 5px;
+    margin: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+
 }
 
 .listItems {
@@ -58,29 +98,35 @@ section {
     display:flex;
     flex-direction:row;
     width:90vw;
+    height: 200px;
     flex-wrap: wrap;
     font-size: large;
 }
 
-
 .menuItem {
-    width: 200px;
-    height: 70px;
+    width: 190px;
+    height: 75px;
     margin: 5px;
-    background-color: #dcdee0;
-    color: #2A2D34;
+    background-color:rgb(201, 194, 194);
+    color: #2e374b;
     padding: 5px;
-    border-radius: 15px;
     display: flex;
     flex-direction: row;
-    font-size: 17px;
-    font-weight: bold;
+    font-size: 15px;
+    border-radius: 8px;
+}
+
+.menuItem:hover,
+.menuItem:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
 }
 
 .divNameItem {
     display: flex;
     flex-direction: column;
-    margin-left: 5px;
+    justify-content: space-between;
+    margin: 5px;
 }
 
 .divImgItem {
@@ -89,9 +135,9 @@ section {
 }
 
 .imgItem {
-    width: 70px;
-    height:70px;
-    border-radius: 15px;
+    width: 65px;
+    height:65px;
+    margin:5px;
 }
 
 .listSelectedItems {
@@ -99,21 +145,39 @@ section {
     list-style-type: none;
     display:flex;
     flex-direction:column;
-    width:90vw;
+    width:85vw;
     flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 
 .selectedItem {
     margin: 10px;
-    width:60vw;
+    width:85vw;
     color: #2A2D34;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+
 }
 
-.nameSelectedItem {
-    width:250px;
+.divSelectedItem {
+    width:130px;
+}
+
+.divSelectedItemT {
+    width:130px;
+    font-weight: bold;
+}
+
+.divSelectedItem:first-child {
+    width:230px;
+}
+
+.divSelectedItemT:first-child {
+    width:230px;
+    font-weight: bold;
 }
 
 span {
@@ -122,30 +186,45 @@ span {
 
 h2 {
     color: #2A2D34;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 5px;
 } 
 
 .menuHeader {
-    margin-left: 50px;
-    width: 450px;
+    width: 90vw;
+    display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+    justify-content: space-between;
 }
 
 .btnMenuType {
-    background-color: #e47f32;
-    width: 154px;
+    background-color: rgb(240, 235, 235);
+    width: 260px;
     padding: 5px;
     height: 55px;
-    margin-right:10px;
-    outline-color:#696969;
-    border-color: #696969;
     border-style: hidden;
-    border-radius: 10px;
-    color: rgb(255, 255, 255);
+    color: rgb(44, 44, 44);
     font-weight: bold;
-     font-size: 18px;
+    font-size: 18px;
+    border-bottom: rgb(177, 175, 175);
+    border-bottom-style: solid;
+    border-width: 2.5px;
+    outline: none ;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
+.btnMenuType:first-child {
+    color: #B23A48;
+}
+/*
+.btnMenuType:hover,
+.btnMenuType:focus {
+    background-color: rgb(177, 175, 175);
+}
+*/
 .btnSend {
     background-color: #5C946E;
     width: 170px;
@@ -164,6 +243,24 @@ h2 {
 .deleteBtn {
     width: 20px;
     height: 20px;
+}
+
+.iconBtn {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: 5px;
+}
+
+.iconLogo {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.nameCategory {
+    position: relative;
+    top: 10px;
 }
 
 /* .vistaTodo {
