--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -96,11 +96,12 @@ section {
 .listItems {
     list-style-type: none;
     display:flex;
-    flex-direction:row;
-    width:90vw;
     height: 200px;
+    width:90vw;
+    flex-direction: row;
     flex-wrap: wrap;
     font-size: large;
+    overflow-x:hidden;
 }
 
 .menuItem {
@@ -114,6 +115,7 @@ section {
     flex-direction: row;
     font-size: 15px;
     border-radius: 8px;
+    flex-shrink: 0;
 }
 
 .menuItem:hover,
@@ -200,7 +202,7 @@ h2 {
 
 .btnMenuType {
     background-color: rgb(240, 235, 235);
-    width: 260px;
+    width: 15vw;
     padding: 5px;
     height: 55px;
     border-style: hidden;
