--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -326,3 +326,9 @@ h2 {
     }
     
   } 
+  .btnPreparado{
+    background-color: darkgreen;
+  }
+  .btnSendToMesonero{
+      background-color: firebrick;
+  }
