--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -270,12 +270,27 @@ h2 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    background-color: rgb(240, 235, 235);
 }
 .divSingleOrder {
     margin: 15px;
-    padding: 20px;
-    outline-color: black;
-    outline-style: solid;
+    padding: 30px;
+    border-radius: 20px;
+    font-size: 18px;
+    background-color: rgba(255, 255, 255, 0.767);
+    /*
+    background-image: url(../img/streeFoodShot5.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    */
+}
+.divSingleOrder button {
+    color: white;
+    font-size: 19px;
+    outline: none;
+    border-style: hidden;
+    height:35px;
+    border-radius: 20px;
 }
 .dateOrder{
     display: flex;
@@ -294,7 +309,10 @@ h2 {
 .divListo {
     display: flex;
     flex-direction: row;
-    justify-content:flex-end;
+    justify-content:center;
+}
+.divListo button {
+    width: 150px;
 }
 /* .vistaTodo {
     width: 50PX;
@@ -326,6 +344,9 @@ h2 {
     }
     
   } 
+  .btnPreparacion{
+    background-color: rgb(153, 149, 149);
+  }
   .btnPreparado{
     background-color: darkgreen;
   }
