--- a/my-app/src/Pedidos.css
+++ b/my-app/src/Pedidos.css
@@ -660,6 +660,12 @@ form h2{
     margin-top: 25vh;
     font-size: 50px;
 }
+.signUpSection1 span{
+    font-size: 22px;
+    width: 50%;
+    color:whitesmoke;
+    font-weight: bold;
+}
 .signUpSection2 {
     width:45%;
     display: flex;
@@ -802,21 +808,28 @@ form h2{
         height: 20%;
     }
     .signUpSection1 h1{
-        margin-top: 45px;
+        margin-top: 20px;
         font-size: 35px;
         display: flex;
-        width: 50%;
+        width: 35%;
         margin-right: auto;
         margin-left: auto;
+        margin-bottom: 0px;
+    }
+    .signUpSection1 span{
+        font-size: 22px;
+        width: 50%;
+        color:whitesmoke;
+        font-weight: bold;
     }
     .signUpSection2{
         width:100%;
-        font-size: 20px;
+        font-size: 16px;
         height: 80%;
         background-color: rgba(255, 255, 255, 0.87);
     }
     .signUpSection2 input{
-        font-size: 20px;
+        font-size: 16px;
         margin-bottom: 15px;
     }
     form{
@@ -825,11 +838,11 @@ form h2{
         margin-right: auto;
     }
     form h2{
-        font-size: 28px;
+        font-size: 25px;
         margin-bottom: 20px;
     }
     .submitForm{
-        font-size: 20px;
+        font-size: 18px;
         margin-bottom: 0%;
     }
   } 
@@ -980,7 +993,12 @@ form h2{
         height: 20%;
     }
     .signUpSection1 h1{
-        margin-top: 20px;
+        margin-top: 28px;
+        width:70%;
+        font-size: 27px;
+    }
+    .signUpSection1 span{
+        font-size: 18px;
     }
     .signUpSection2{
         width:100%;
